vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_non_result_if_with_unsafe_condition.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_non_result_if_with_unsafe_condition.vv:5:4: error: expression evaluated but not used
    3 |     _ := if true {
    4 |         if unsafe { true } == true {
    5 |             $embed_file(@FILE)
      |             ~~~~~~~~~~~~~~~~~~
    6 |         } else {
    7 |             fallback
