vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_non_result_if_with_unsafe_condition.vv
fn main() {
	fallback := $embed_file(@FILE)
	_ := if true {
		if unsafe { true } == true {
			$embed_file(@FILE)
		} else {
			fallback
		}
		0
	} else {
		1
	}
}
